test/error/ast/ExprInLeftNotInteger.mod
MODULE ExprInLeftNotInteger;
VAR b: BOOLEAN;
BEGIN
  b := 1.5 IN {1};
END ExprInLeftNotInteger.
